--- a/source/app.console/app.console.csproj
+++ b/source/app.console/app.console.csproj
@@ -37,6 +37,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +58,10 @@
     <Compile Include="filelisteners\PatternListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="searchengine\Bootstrap.cs" />
+    <Compile Include="searchengine\FoundResult.cs" />
+    <Compile Include="searchengine\FoundResultArgs.cs" />
+    <Compile Include="searchengine\ResultListener.cs" />
+    <Compile Include="searchengine\Search.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
